@@ -379,7 +379,8 @@ UNRELEASED
  * Evaluating an INCLUDE would corrupt the evaluated string.
    Broke in 1.6.7.
  * code stripping tutorial did not work.
- * v: / was broken when searching for a single character.
  * WORD did not work while interpreting.
+ * v: / was broken when searching for a single character.
  * v: q: switched in BASIC rom.
  * v: error when clearing buffer with dd.
+ * v: cancelling :w! changed the active filename.
